--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,2 +1,7 @@
+<h1>All Contacts</h1>
 
-<p>Nothing here</p>
+<ul>
+<% Contact.all.each do |contact| %>
+  <li><%= contact.first_name %> <%= contact.last_name %></li>
+<% end %>
+</ul>
