fix contact background colour

--- a/public/styles.css
+++ b/public/styles.css
@@ -48,7 +48,7 @@ margin: 0;
 
 .contact {
   list-style-type: none;
-  background-color: aqua;
+  background-color: #76e8e8;
   font-weight: bolder;
   font-family: helvetica;
   line-height: 2;
